--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -681,7 +681,7 @@
             animating = true;
             updateButtons();
 
-            const nextTurn = data[current + 1];
+            const nextTurn = data[current];
             const playerType = nextTurn.turn === 'first' ? 'first' : 'second';
 
             let prev_positions;
