--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -676,6 +676,10 @@
             }
         }
 
+        function invertPoint(p) {
+            return typeof p === 'number' ? 25 - p : p;
+        }
+
         function animateToNext() {
             if (current >= data.length - 1 || animating) return;
             animating = true;
@@ -694,6 +698,13 @@
             const temp_positions = JSON.parse(JSON.stringify(prev_positions));
 
             let moves = nextTurn.moves || [];
+            if (inverted) {
+                moves = moves.map(m => ({
+                    ...m,
+                    from: invertPoint(m.from),
+                    to: invertPoint(m.to)
+                }));
+            }
 
             // Timeout to reset animating in case of error
             const timeoutId = setTimeout(() => {
