--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -719,7 +719,7 @@
             const temp_positions = JSON.parse(JSON.stringify(prev_positions));
 
             let moves = nextTurn.moves || [];
-            if (inverted && playerType === 'second') {
+            if (inverted) {
                 moves = moves.map(m => ({
                     ...m,
                     from: invertPoint(m.from),
