--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -552,9 +552,10 @@
                 fromY = barY + (barCount - 1) * barDy;
             } else {
                 const fromPoint = parseInt(fromStr);
-                fromX = getX(fromPoint);
-                const fromBaseY = getBaseY(fromPoint);
-                const fromDy = getDy(fromPoint);
+                const adjustedFromPoint = inverted ? (playerType === 'first' ? 25 - fromPoint : fromPoint) : (playerType === 'second' ? 25 - fromPoint : fromPoint);
+                fromX = getX(adjustedFromPoint);
+                const fromBaseY = getBaseY(adjustedFromPoint);
+                const fromDy = getDy(adjustedFromPoint);
                 const fromCount = player_pos[fromStr] || 0;
                 fromY = fromBaseY + (fromCount - 1) * fromDy;
             }
@@ -577,9 +578,10 @@
                 // No stacking for off, fixed position
             } else {
                 const toPoint = parseInt(toStr);
-                toX = getX(toPoint);
-                const toBaseY = getBaseY(toPoint);
-                const toDy = getDy(toPoint);
+                const adjustedToPoint = inverted ? (playerType === 'first' ? 25 - toPoint : toPoint) : (playerType === 'second' ? 25 - toPoint : toPoint);
+                toX = getX(adjustedToPoint);
+                const toBaseY = getBaseY(adjustedToPoint);
+                const toDy = getDy(adjustedToPoint);
                 let toCount = player_pos[toStr] || 0;
                 if (move.hit) {
                     toCount = 0; // After hit, place on empty point
@@ -630,9 +632,10 @@
             if (opp_pos[toStr] === 0) delete opp_pos[toStr];
 
             const hitPoint = parseInt(toStr);
-            const fromX = getX(hitPoint);
-            const fromBaseY = getBaseY(hitPoint);
-            const fromDy = getDy(hitPoint);
+            const adjustedHitPoint = inverted ? (hitPlayerType === 'first' ? 25 - hitPoint : hitPoint) : (hitPlayerType === 'second' ? 25 - hitPoint : hitPoint);
+            const fromX = getX(adjustedHitPoint);
+            const fromBaseY = getBaseY(adjustedHitPoint);
+            const fromDy = getDy(adjustedHitPoint);
             const hitCount = opp_pos[toStr] || 0; // Now 0
             let fromY = fromBaseY + (hitCount - 1) * fromDy;
 
