--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -438,7 +438,7 @@
                         if (player === 'first') {
                             displayPoint = 25 - point;
                         } else if (player === 'second') {
-                            displayPoint = point;
+                            displayPoint = 25 - point;
                         }
                     } else {
                         if (player === 'second') {
